# e1342

./: CHANGELOG.md  LICENSE  README.md  e1342.cabal  imgui.ini
app/: DunaiDIG.hs  MandelbrotMSFDIG.hs  MandelbrotMSFDIGmk2.hs  MandelbrotYampaDIG.hs  MultiThreadedPOC.hs  Test.bak  Test.hs
